--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     },
     "homepage": "https://github.com/kristel-tech/pizza_warriors#readme",
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mysql": "^2.18.1",
+        "passport": "^0.4.1",
+        "passport-github": "^1.1.0"
     }
 }
