--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "the war of the pizza gods",
     "main": "index.js",
     "scripts": {
+        "dev": "nodemon index.js",
         "start": "node index.js "
     },
     "repository": {
@@ -17,6 +18,11 @@
     },
     "homepage": "https://github.com/kristel-tech/pizza_warriors#readme",
     "dependencies": {
-        "express": "^4.17.1"
+        "bluebird": "^3.7.2",
+        "express": "^4.17.1",
+        "mysql": "^2.18.1",
+        "mysql2": "^2.2.5",
+        "nodemon": "^2.0.7",
+        "request": "^2.88.2"
     }
 }
