--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     },
     "homepage": "https://github.com/kristel-tech/pizza_warriors#readme",
     "dependencies": {
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
+        "nodemon": "^2.0.7",
         "passport": "^0.4.1",
-        "passport-github": "^1.1.0"
+        "passport-github": "^1.1.0",
+        "passport-jwt": "^4.0.0"
     }
 }
