--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
         "nodemon": "^2.0.7",
         "passport": "^0.4.1",
         "passport-github": "^1.1.0",
+        "passport-jwt": "^4.0.0",
         "passport-oauth": "^1.0.0",
         "request": "^2.88.2",
         "standard": "^16.0.3",
         "util": "^0.12.4"
-        "passport-jwt": "^4.0.0"
     }
 }
