--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "mysql": "^2.18.1",
         "mysql2": "^2.2.5",
         "nodemon": "^2.0.7",
-        "request": "^2.88.2"
+        "request": "^2.88.2",
         "passport": "^0.4.1",
         "passport-github": "^1.1.0",
         "passport-jwt": "^4.0.0",
