--- a/package.json
+++ b/package.json
@@ -18,19 +18,13 @@
     },
     "homepage": "https://github.com/kristel-tech/pizza_warriors#readme",
     "dependencies": {
-        "bluebird": "^3.7.2",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
-        "mysql2": "^2.2.5",
         "nodemon": "^2.0.7",
         "passport": "^0.4.1",
-        "passport-github": "^1.1.0",
         "passport-jwt": "^4.0.0",
-        "passport-oauth": "^1.0.0",
-        "request": "^2.88.2",
-        "standard": "^16.0.3",
-        "util": "^0.12.4"
+        "request": "^2.88.2"
     }
 }
